--- a/web作成課題2/index.html
+++ b/web作成課題2/index.html
@@ -4,30 +4,47 @@
 <head>
     <title>ぎふてっど</title>
     <meta name="description" content="ギフテッドは就労移行を目的とした事業展開をしております。より一人ひとりが個性と合った就職をモットーとしております。">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1.0 minimum-scale=1.0">
+
     <link rel="icon" href="image/favicons/favicon.ico">
     <link rel="coffe_favicon" href="image/test.png" sizes="180x180">
-    <link href-"https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="index_body">
     <header>
         <nav>
-            <div id="flex_header">
-            <img src="image/test.png" alt="logo">
-            <ul>
-                <li>NEWS
-                </li>
-                <li>MENU
-                </li>
-                <li>CONTACT
-                </li>
-            </ul>
+            <div id="grid_header">
+                <div class="grid_contentA">
+                    <a href="index.html" class="flex_link">
+                        <img src="image/logo.svg" alt="logo">
+                    </a>
+                </div>
+                <div class="grid_contentB">
+                    <ul>
+                        <li><a href="news.html">NEWS</a>
+                        </li>
+                        <li><a href="menu.html">MENU</a>
+                        </li>
+                        <li><a href="contact.html">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
+    <main>
+        <section>
+            <div class="center_text">
+                <h2>We'll Make Your Day</h2>
+                <p>ギフテッドなカフェで癒されてみませんか？発達障害に効く食材で脳の中からリフレッシュ。</p>
+                <button class="menu_button"><a href="menu.html">メニューを見る</a></button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
